@@ -1,4 +1,4 @@
-HEAP=[76, if(sizebyte(0)==16,4730,4953)];
+HEAP=[76, if(sizebyte(0)==16,4255,4403)];
 default(realprecision,154); Pi; default(realprecision,38);
 \e
 ellinit([-1,0])
